--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
 
 <h2>Second header</h2>
-<p>I am changing this paragraph.</p>
+<p>I am changing this paragraph. more</p>
 
 <h3>third header</h3>
 </body>
