--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
 </div>
 
 <div class="cardz">
-<img src="images/briefcase.png">
+<img src="images2/briefcase.png">
 <h2>Simple</h2>
 <p>A simple app, <strong>very simple app</strong></p>
 </div>
 
 <div class="cardz">
-<img src="images/heart.png">
+<img src="images2/heart.png">
 <h2>Fast</h2>
 <p>A fast app, <strong>very fast app</strong></p>
 </div>
 
 <div class="cardz">
-<img src="images/diamond.png">
+<img src="images2/diamond.png">
 <h2>Cool</h2>
 <p>A cool app, <strong>very cool app</strong></p>
 </div>
 
 <div class="cardz">
-<img src="images/laptop.png">
+<img src="images2/laptop.png">
 <h2>Awesome</h2>
 <p>An awesome app, <strong>very awesome app</strong></p>
 </div>
