--- a/index.html
+++ b/index.html
@@ -13,39 +13,57 @@
 
 </head>
 <body>
-
 <div id="banner">
 	<div id="inner banner">
 <h1>Welcome to my Landing Page!</h1>
 <p>Important line</p>
 <p><a href="http://www.lewagon.com">Sign up now!</a></p>
 	</div>
+  </div>
 
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-7 col-md-5">
+
+	<div class="cardz">
+		<img src="images2/briefcase.png" alt="picture description" width="200">
+		<h2>Simple</h2>
+		<p>A simple app, <strong>very simple app</strong></p>
+		</div> 
+
+    	</div>
+   <div class="col-xs-12 col-sm-7 col-md-5">
+      
+		<div class="cardz">
+		<img src="images2/heart.png" alt="picture description" width="200">
+		<h2>Fast</h2>
+		<p>A fast app, <strong>very fast app</strong></p>
+		</div>
+
+    	</div>
+ 	<div class="col-xs-12 col-sm-7 col-md-5">
+      
+		<div class="cardz">
+		<img src="images2/diamond.png" alt="picture description" width="200">
+		<h2>Cool</h2>
+		<p>A cool app, <strong>very cool app</strong></p>
+		</div>
+
+<div class="col-xs-12 col-sm-7 col-md-5">
+		<div class="cardz">
+		<img src="images2/laptop.png" alt="picture description" width="200">
+		<h2>Awesome</h2>
+		<p>An awesome app, <strong>very awesome app</strong></p>
+		</div>
+		
+
+    </div>
+  </div>
 </div>
 
-<div class="cardz">
-<img src="images2/briefcase.png">
-<h2>Simple</h2>
-<p>A simple app, <strong>very simple app</strong></p>
-</div>
 
-<div class="cardz">
-<img src="images2/heart.png">
-<h2>Fast</h2>
-<p>A fast app, <strong>very fast app</strong></p>
-</div>
 
-<div class="cardz">
-<img src="images2/diamond.png">
-<h2>Cool</h2>
-<p>A cool app, <strong>very cool app</strong></p>
-</div>
-
-<div class="cardz">
-<img src="images2/laptop.png">
-<h2>Awesome</h2>
-<p>An awesome app, <strong>very awesome app</strong></p>
-</div>
 
 <div id="footer">
 <p>This is the footer!</p>
@@ -58,9 +76,7 @@
 </ul>
 </div>
 
-<h2>Second header</h2>
-<p>I am changing this paragraph. more</p>
 
-<h3>third header</h3>
+</div>
 </body>
 </html>
