--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-
+	<style>
+	@import url('https://fonts.googleapis.com/css?family=Montserrat:400,900|Source+Sans+Pro:300');
+	</style>
 
 </head>
 <body>
@@ -24,35 +26,37 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-7 col-md-5">
+    <div class="col-xs-12 col-sm-7 col-md-3">
 
 	<div class="cardz">
-		<img src="images2/briefcase.png" alt="picture description" width="200">
+		<img src="images2/briefcase.png" alt="picture description" width="100">
 		<h2>Simple</h2>
 		<p>A simple app, <strong>very simple app</strong></p>
 		</div> 
 
     	</div>
-   <div class="col-xs-12 col-sm-7 col-md-5">
+   <div class="col-xs-12 col-sm-7 col-md-3">
       
 		<div class="cardz">
-		<img src="images2/heart.png" alt="picture description" width="200">
+		<img src="images2/heart.png" alt="picture description" width="100">
 		<h2>Fast</h2>
 		<p>A fast app, <strong>very fast app</strong></p>
 		</div>
 
     	</div>
- 	<div class="col-xs-12 col-sm-7 col-md-5">
+ 	<div class="col-xs-12 col-sm-7 col-md-3">
       
 		<div class="cardz">
-		<img src="images2/diamond.png" alt="picture description" width="200">
+		<img src="images2/diamond.png" alt="picture description" width="100">
 		<h2>Cool</h2>
 		<p>A cool app, <strong>very cool app</strong></p>
 		</div>
+		</div>
 
-<div class="col-xs-12 col-sm-7 col-md-5">
+
+	<div class="col-xs-12 col-sm-7 col-md-3">
 		<div class="cardz">
-		<img src="images2/laptop.png" alt="picture description" width="200">
+		<img src="images2/laptop.png" alt="picture description" width="100">
 		<h2>Awesome</h2>
 		<p>An awesome app, <strong>very awesome app</strong></p>
 		</div>
@@ -61,8 +65,6 @@
     </div>
   </div>
 </div>
-
-
 
 
 <div id="footer">
